--- a/package.json
+++ b/package.json
@@ -38,7 +38,16 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-flow-strip-types"
+      "transform-flow-strip-types",
+      [
+        "transform-builtin-extend",
+        {
+          "globals": [
+            "Error",
+            "Array"
+          ]
+        }
+      ]
     ]
   },
   "commitlint": {
