--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "rm -rf dist && babel ./src -d ./dist --ignore test.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "lint": "eslint src && remark . -qfo",
+    "lint": "eslint src",
     "prepare": "npm run build",
     "release": "standard-version --no-verify && git push --follow-tags origin master",
     "start": "npm test -- --watch",
