--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install --dev && NODE_ENV=production npm run build && npm prune --production
+      - run: npm install --only=dev && NODE_ENV=production npm run build && npm prune --production
 
       - save_cache:
           paths:
