--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install --only=dev && NODE_ENV=production npm run build && npm prune --production
+      #- run: npm install --only=dev && NODE_ENV=production npm run build && npm prune --production
+      - run: NODE_ENV=production yarn install --production=false
 
       - save_cache:
           paths:
@@ -34,6 +35,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      #- run: yarn test
+      - run: yarn test
 
 
