--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,9 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install --only=dev && NODE_ENV=production npm run build && npm prune --production
-
+      #- run: npm install --only=dev && NODE_ENV=production npm run build && npm prune --production
+       - run: yarn install --production=false
+       
       - save_cache:
           paths:
             - node_modules
