--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
     working_directory: ~/repo
     environment:
-      DOCKER_REGISTRY:"registry.us-west-1.aliyuncs.com"
+      DOCKER_REGISTRY:"registry.us-west-1.aliyuncs.com",
       DOCKER_REPO:"registry.us-west-1.aliyuncs.com/36node/sketch-es-service"
     steps:
       - checkout
