--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
         
       # run tests!
       #- run: yarn test
-      - setup_remote_docker
+      - setup_remote_docker: 
           docker_layer_caching: true
       - run: |
           DOCKER_REGISTRY="registry.us-west-1.aliyuncs.com"
