--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,5 @@ jobs:
           DOCKER_REGISTRY="registry.us-west-1.aliyuncs.com"
           DOCKER_REPO="registry.us-west-1.aliyuncs.com/36node/sketch-es-service"
           TAG=latest
-          docker build -t "$DOCKER_REPO:$TAG" --file --file `pwd`/Dockerfile .
+          docker build -t "$DOCKER_REPO:$TAG" --file  `pwd`/Dockerfile .
 
