--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
           DOCKER_REGISTRY="registry.us-west-1.aliyuncs.com"
           DOCKER_REPO="registry.us-west-1.aliyuncs.com/36node/sketch-es-service"
           TAG=latest
+          touch ./Dockerfile
           ls -lh
           docker build -t "$DOCKER_REPO:$TAG" --file  `pwd`/Dockerfile .
           ls -lh
