--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       # run tests!
       #- run: yarn test
       - setup_remote_docker: 
-      #    docker_layer_caching: true
+          docker_layer_caching: true
       - run:
           name: Install Docker client
           command: |
