--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
       - setup_remote_docker: 
           docker_layer_caching: true
       - run: |
+          TAG=latest
           DOCKER_REGISTRY=registry.us-west-1.aliyuncs.com
           DOCKER_REPO=registry.us-west-1.aliyuncs.com/36node/sketch-es-service
           docker build -t "$DOCKER_REPO:$TAG" .
